json seperate testing objects in seperate module